@@ -4,6 +4,11 @@ ggplot2 1.0.1.9000
 * `theme_minimal()` got slightly more minimal by removing the axis ticks:
   labels now line up beneath the grid lines (@tomschloss, #1084)
 
+* Parameter `device` now supports character argument to specify which supported
+  device to use ('pdf', 'png', 'jpeg', etc.), for when it cannot be correctly
+  inferred from the file extension (for example when a temporay filename is
+  supplied server side in shiny apps) (@sebkopf, #939)
+
 * `ggsave()` has been simplified a little to make it easier to maintain.
   It no longer checks that you're printing a ggplot2 object (so now also
   works with any grid grob) (#970), and always requires a filename.
